# Parlestro

./: .gitignore  CMakeLists.txt  Parlestro.sln  Parlestro.vcxproj  Parlestro.vcxproj.filters  README.md  main.cpp
DataTypes/: Boundaries.cpp  Boundaries.h  Shape.h
Parlestro/x64/Debug/: Parlestro.exe.recipe  Parlestro.ilk  Parlestro.vcxproj.FileListAbsolute.txt  vc143.idb
Parlestro/x64/Debug/Parlestro.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Parlestro.lastbuildstate  Parlestro.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Window/: BaseWindowClass.cpp  BaseWindowClass.h
